# mmCoreAndDevices

./: .gitignore  .gitmodules  meson.build
.github/workflows/: build.yml
subprojects/DeviceAdapters/: _ADAPTERS_NOT_IN_BUILD.txt  meson.build
subprojects/DeviceAdapters/89NorthLDI/: meson.build
subprojects/DeviceAdapters/ASIStage/: ASIStage.cpp  ASIStage.h
subprojects/DeviceAdapters/ASITiger/: ASIPLogic.cpp  ASITiger.h
subprojects/DeviceAdapters/AgilentLaserCombiner/: meson.build
subprojects/DeviceAdapters/Andor/: meson.build
subprojects/DeviceAdapters/BaumerOptronic/: meson.build
subprojects/DeviceAdapters/BlueboxOptics_niji/: meson.build
subprojects/DeviceAdapters/CNCMicroscope/: meson.build
subprojects/DeviceAdapters/CanonEDSDK/: meson.build
subprojects/DeviceAdapters/CoboltOfficial/: CoboltOfficial.cpp  Logger.h
subprojects/DeviceAdapters/DTOpenLayer/: meson.build
subprojects/DeviceAdapters/DirectElectron/: meson.build
subprojects/DeviceAdapters/DirectElectron/src/DECamera/: DECamera.h
subprojects/DeviceAdapters/Diskovery/: meson.build
subprojects/DeviceAdapters/FLICamera/: meson.build
subprojects/DeviceAdapters/FakeCamera/: meson.build
subprojects/DeviceAdapters/FirstLightImaging/: meson.build
subprojects/DeviceAdapters/FreeSerialPort/: meson.build
subprojects/DeviceAdapters/GigECamera/: meson.build
subprojects/DeviceAdapters/HIDManager/: meson.build
subprojects/DeviceAdapters/IDS_uEye/: meson.build
subprojects/DeviceAdapters/IIDC/: meson.build
subprojects/DeviceAdapters/ITC18/: meson.build
subprojects/DeviceAdapters/JAI/: meson.build
subprojects/DeviceAdapters/Jenoptik/: ImgFinalProc.cpp  TriggerWaitProc.cpp  meson.build  mmgrProgRes.cpp  mmgrProgRes.h
subprojects/DeviceAdapters/KuriosLCTF/: meson.build
subprojects/DeviceAdapters/Lumencor/: meson.build
subprojects/DeviceAdapters/LumencorCIA/: CIA.cpp  CIA.h  meson.build
subprojects/DeviceAdapters/MCCDAQ/: meson.build
subprojects/DeviceAdapters/MCL_MicroDrive/: meson.build
subprojects/DeviceAdapters/MCL_NanoDrive/: meson.build
subprojects/DeviceAdapters/MatrixVision/: meson.build
subprojects/DeviceAdapters/Mightex/: meson.build
subprojects/DeviceAdapters/Modbus/: meson.build
subprojects/DeviceAdapters/NI100X/: meson.build
subprojects/DeviceAdapters/NIDAQ/: meson.build
subprojects/DeviceAdapters/NKTSuperK/: meson.build
subprojects/DeviceAdapters/NiMotionStageController/: meson.build
subprojects/DeviceAdapters/PVCAM/: PVCAMIncludes.h  Version.h
subprojects/DeviceAdapters/Standa/: meson.build
subprojects/DeviceAdapters/Standa8SMC4/: meson.build
subprojects/DeviceAdapters/StandaStage/: meson.build
subprojects/DeviceAdapters/TriggerScopeMM/: TriggerScopeMMDAC.cpp  TriggerScopeMMTTL.cpp
subprojects/DeviceAdapters/Utilities/: Utilities.cpp  Utilities.h
subprojects/DeviceAdapters/Ximea/: meson.build
subprojects/DeviceAdapters/ZeissAxioZoom/: meson.build
subprojects/DeviceAdapters/dc1394/: meson.build
subprojects/DeviceAdapters/iPadSLM/: meson.build
subprojects/MMCore/: meson.build
subprojects/MMCoreJ_wrap/: meson.build
subprojects/MMCorePy_wrap/: meson.build
subprojects/MMDevice/: meson.build
